[package]
name = "chroot-deploy"
version = "0.1.2"
edition = "2021"
license = "GPL-3.0-or-later"
homepage = "https://github.com/d-e-s-o/chroot-deploy"
repository = "https://github.com/d-e-s-o/chroot-deploy.git"
readme = "README.md"
categories = [
  "accessibility",
  "api-bindings",
  "asynchronous",
  "command-line-utilities",
  "os::unix-apis"
]
keywords = [
  "async",
  "chroot",
  "linux",
]
description = """
A program able to deploy and work with a chroot environment in a quick
manner.
"""
default-run = "chroot-deploy"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "shell-complete"
path = "var/shell-complete.rs"
required-features = ["clap_complete"]

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
incremental = false
panic = "abort"

[build-dependencies]
anyhow = "1.0.68"
grev = "0.1.3"

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.1.4", features = ["derive"] }
clap_complete = { version = "4.1.1", optional = true }
futures-util = { version = "0.3.30", default-features = false, features = ["async-await-macro", "std"] }
fs4 = { version = "0.13", default-features = false, features = ["tokio"] }
libc = "0.2"
tar = { version = "0.4.40", default-features = false }
tokio = { version = "1.0", default-features = false, features = ["fs", "io-util", "macros", "process", "rt", "time"] }
xz2 = { version = "0.1.7", default-features = false }

[dev-dependencies]
tempfile = "3.8.1"
